--- a/popup.html
+++ b/popup.html
@@ -348,8 +348,8 @@
                     Calculation Formula
                 </h2>
                 <div class="formula-box">
-                    <div class="formula-title">Story Points = √(Time × Complexity) + Priority Bonus</div>
-                    <div class="formula">SP = √(T × C) + B</div>
+                    <div class="formula-title">Story Points = √((Time × Complexity), 2) + Priority Bonus</div>
+                    <div class="formula">SP = √((T × C), 2) + B</div>
                     <div class="bonus-info">
                         <div class="bonus-title">Priority Bonus</div>
                         <div class="bonus-text">+0.5 points when Priority = "Urgent"</div>
