alert notification ui is changed

--- a/popup.html
+++ b/popup.html
@@ -80,53 +80,145 @@
         .status-indicator {
             display: flex;
             align-items: center;
-            gap: 12px;
-            padding: 16px;
-            background: #f9fafb;
-            border-radius: 8px;
-            border: 1px solid #e5e7eb;
+            gap: 16px;
+            padding: 20px;
+            background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);
+            border-radius: 12px;
+            border: 1px solid #e2e8f0;
+            position: relative;
+            overflow: hidden;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .status-indicator::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 3px;
+            background: linear-gradient(90deg, #10b981, #059669);
+            transform: scaleX(0);
+            transition: transform 0.3s ease;
+        }
+
+        .status-indicator.active::before {
+            transform: scaleX(1);
+        }
+
+        .status-indicator.inactive::before {
+            background: linear-gradient(90deg, #ef4444, #dc2626);
+            transform: scaleX(1);
         }
 
         .status-dot {
-            width: 12px;
-            height: 12px;
+            width: 16px;
+            height: 16px;
             border-radius: 50%;
-            background: #10b981;
+            background: linear-gradient(135deg, #10b981, #059669);
+            position: relative;
             animation: pulse 2s infinite;
+            box-shadow: 0 0 0 4px rgba(16, 185, 129, 0.1);
+            transition: all 0.3s ease;
+        }
+
+        .status-dot::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 6px;
+            height: 6px;
+            background: white;
+            border-radius: 50%;
+            opacity: 0.9;
         }
 
         .status-dot.inactive {
-            background: #ef4444;
+            background: linear-gradient(135deg, #ef4444, #dc2626);
+            box-shadow: 0 0 0 4px rgba(239, 68, 68, 0.1);
             animation: none;
         }
 
+        .status-dot.inactive::after {
+            background: #fef2f2;
+        }
+
         .status-text {
-            font-weight: 500;
-            color: #374151;
+            font-weight: 600;
+            color: #1e293b;
+            font-size: 15px;
+            letter-spacing: -0.01em;
+        }
+
+        .status-content {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .status-subtitle {
+            font-size: 12px;
+            color: #64748b;
+            margin-top: 2px;
+            font-weight: 400;
         }
 
         .toggle-btn {
-            background: #4f46e5;
+            background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%);
             color: white;
             border: none;
-            padding: 8px 16px;
-            border-radius: 6px;
+            padding: 12px 24px;
+            border-radius: 8px;
             cursor: pointer;
-            font-weight: 500;
-            transition: all 0.2s;
+            font-weight: 600;
+            font-size: 14px;
+            letter-spacing: -0.01em;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            box-shadow: 0 4px 12px rgba(79, 70, 229, 0.3);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .toggle-btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+            transition: left 0.5s;
+        }
+
+        .toggle-btn:hover::before {
+            left: 100%;
         }
 
         .toggle-btn:hover {
-            background: #4338ca;
-            transform: translateY(-1px);
+            background: linear-gradient(135deg, #4338ca 0%, #6d28d9 100%);
+            transform: translateY(-2px);
+            box-shadow: 0 8px 20px rgba(79, 70, 229, 0.4);
+        }
+
+        .toggle-btn:active {
+            transform: translateY(0);
+            box-shadow: 0 2px 8px rgba(79, 70, 229, 0.3);
         }
 
         .toggle-btn.deactivate {
-            background: #ef4444;
+            background: linear-gradient(135deg, #ef4444 0%, #dc2626 100%);
+            box-shadow: 0 4px 12px rgba(239, 68, 68, 0.3);
         }
 
         .toggle-btn.deactivate:hover {
-            background: #dc2626;
+            background: linear-gradient(135deg, #dc2626 0%, #b91c1c 100%);
+            box-shadow: 0 8px 20px rgba(239, 68, 68, 0.4);
+        }
+
+        .toggle-btn.deactivate:active {
+            box-shadow: 0 2px 8px rgba(239, 68, 68, 0.3);
         }
 
         .feature-list {
@@ -304,9 +396,12 @@
                     <span class="section-icon">📊</span>
                     Status
                 </h2>
-                <div class="status-indicator">
+                <div class="status-indicator" id="statusIndicator">
                     <div class="status-dot" id="statusDot"></div>
-                    <span class="status-text" id="statusText">Checking...</span>
+                    <div class="status-content">
+                        <span class="status-text" id="statusText">Checking...</span>
+                        <div class="status-subtitle" id="statusSubtitle">Initializing calculator</div>
+                    </div>
                     <button class="toggle-btn" id="toggleBtn">Activate</button>
                 </div>
             </div>
@@ -435,7 +530,7 @@
 
         <div class="footer">
             <div class="footer-text">
-                Made with ❤️ for Jira users
+                Made with ❤️ for JoBins users
             </div>
         </div>
     </div>
